--- a/STUDENT EXAM SCORE REGİSTER SYSTEM Wht Cshrp/STUDENT EXAM SCORE REGİSTER SYSTEM Wht Cshrp.csproj
+++ b/STUDENT EXAM SCORE REGİSTER SYSTEM Wht Cshrp/STUDENT EXAM SCORE REGİSTER SYSTEM Wht Cshrp.csproj
@@ -46,16 +46,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="DBNotKayitDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBNotKayitDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="FrmGiris.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmGiris.Designer.cs">
+      <DependentUpon>FrmGiris.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmOgrenciDetay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmOgrenciDetay.Designer.cs">
+      <DependentUpon>FrmOgrenciDetay.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmOgretmenDetay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmOgretmenDetay.Designer.cs">
+      <DependentUpon>FrmOgretmenDetay.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FrmGiris.resx">
+      <DependentUpon>FrmGiris.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmOgrenciDetay.resx">
+      <DependentUpon>FrmOgrenciDetay.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmOgretmenDetay.resx">
+      <DependentUpon>FrmOgretmenDetay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +89,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="DBNotKayitDataSet.xsc">
+      <DependentUpon>DBNotKayitDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="DBNotKayitDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DBNotKayitDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DBNotKayitDataSet.xss">
+      <DependentUpon>DBNotKayitDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
