--- a/STUDENT EXAM SCORE REGİSTER SYSTEM Wht Cshrp/App.config
+++ b/STUDENT EXAM SCORE REGİSTER SYSTEM Wht Cshrp/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="STUDENT_EXAM_SCORE_REGİSTER_SYSTEM_Wht_Cshrp.Properties.Settings.DBNotKayitConnectionString"
+            connectionString="Data Source=DESKTOP-D0LP1EG;Initial Catalog=DBNotKayit;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
